# asimov-serpapi-module

./: CHANGES.md  Cargo.toml  Makefile  README.md
.asimov/: module.yaml
.config/: gemspec.rb  package.json  pyproject.toml
.github/workflows/: release.yaml
src/: api.rs  engine.rs  engines.rs  jq.rs  lib.rs  main.rs
src/api/: bing.rs  duckduckgo.rs  google.rs
src/fetcher/: main.rs
src/importer/: main.rs
src/jq/: search.jq
tests/fixtures/: bing.json  bing.jsonld  duckduckgo.json  duckduckgo.jsonld  google.json  google.jsonld
