# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-serpapi-module"
version = "0.1.3"
authors = ["ASIMOV Protocol <support@asimov.so>"]
edition = "2024"
#rust-version = "1.85"
description = "ASIMOV module for data import powered by the SerpApi search data platform."
#documentation = "https://docs.rs/asimov-serpapi-module"
readme = true
homepage = "https://github.com/asimov-modules"
repository = "https://github.com/asimov-modules/asimov-serpapi-module"
license = "Unlicense"
keywords = ["asimov-module", "asimov", "ai"]
categories = [
  "command-line-utilities",
  "api-bindings",
  "web-programming::http-client",
  "text-processing",
]
publish = true

[features]
default = ["all", "cli", "std"]
all = ["tracing"]
cli = ["asimov-module/cli", "pretty", "std", "dep:clap", "dep:clientele"]
pretty = ["dep:colored_json"]
std = [
  "asimov-module/std",
  "clap?/std",
  "clientele?/std",
  "jq/std",
  "serde/std",
  "tracing-subscriber?/fmt",
  "tracing-subscriber?/std",
  "url/std",
]
tracing = [
  "asimov-module/tracing",
  "clientele?/tracing",
  "dep:tracing-subscriber",
]
unstable = []

[dependencies]
asimov-module = { version = "25.0.0-dev.21", default-features = false, features = [
  "serde",
] }
clap = { version = "4.5", default-features = false, optional = true }
clientele = { version = "0.3", default-features = false, features = [
  "argfile",
  "dotenv",
  "wild",
], optional = true }
colored_json = { version = "5", default-features = false, optional = true }
jq = { version = "0.1", default-features = false, features = ["all"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "alloc",
  "tracing-log",
], optional = true }
ureq = { version = "3.0", default-features = false, features = [
  "platform-verifier",
  "rustls",
  "json",
] }
url = { version = "2.5", default-features = false }

[profile.release]
opt-level = "z"
strip = true
lto = "thin"

[[bin]]
name = "asimov-serpapi-fetcher"
path = "src/fetcher/main.rs"
required-features = ["cli"]

[[bin]]
name = "asimov-serpapi-importer"
path = "src/importer/main.rs"
required-features = ["cli"]
